test/shouldPass/expr/andInt.pas
program Sample;
var
  x : integer;
begin
  x := 100 and 30;
  writeln(x)
end.
