test/shouldFail/expr/andStr.pas
program Sample;
var
  x : string;
begin
  x := 'hello' and 'world';
//     ^^^^^^^^^^^^^^^^^^^
// Operator 'and' cannot be applied to string and string
end.
